<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgrond"
    android:padding="16dp" >


    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:src="@drawable/baseline_person_pin_24"
        android:contentDescription="@string/todo" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/corner"
        android:padding="12dp"
        android:inputType="text"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:id="@+id/lusername"
        android:hint="@string/username"
        android:autofillHints="" />

    <EditText
        android:id="@+id/lpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/corner"
        android:hint="@string/password"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        tools:ignore="TextFields"
        android:autofillHints="" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/llogin"
        android:background="@drawable/corner"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/login"
        tools:ignore="TextViewEdits" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/corner"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:id="@+id/btnregister"
        android:text="@string/register"
        tools:ignore="TextViewEdits" />
</LinearLayout>